--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
         <div class="container">
         <h1 class="title">Rock Paper Scissors</h2>
 
-            <h3 class="score" id="score">Player <span id="player-score">0</span> - <span id="comp-score">0</span> Computer</h3>
+            <h3 class="score" id="score">You <span id="player-score">0</span> - <span id="comp-score">0</span> CPU</h3>
 
 
 
             <div class="board">
-                <div id="player-board"><i class="fas fa-hand-rock"></i></div>
-                <div id="computer-board"><i class="fas fa-hand-paper"></i></div>
+                <div id="player-board"><i id="player-b" class="fas fa-hand-rock"></i></div>
+                <div id="computer-board"><i id="computer-b" class="fas fa-hand-paper"></i></div>
              </div>
             
         <h2 class="message" id="message">Reach 5 to win!</h2>
@@ -27,6 +27,8 @@
           <button>Scissors</button>
         </div>
     </div>
+
+    <script src="game.js"></script>
     </body>
 
 </html>
